# oCloth

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT.md  README.md  cloth.opam  setup_switch.bat
Documentation/: Cloth Compiler Specification (Draft).md  Cloth Language Specification (Draft).md  Cloth Language Specification.md  Cloth Ownership and Lifetime Model.md
Example/: NumberFunctions.co  NumberFunctions.json  build.toml
Example/Factory/: README.md  build.toml
Example/Factory/src/app/factorydemo/: Assembler.co  Log.co  Machine.co  MachineFactory.co  Main.co  Named.co  Serviceable.co  UnknownMachineError.co  Welder.co  Workshop.co  WorkshopFullError.co
Example/Notebook/: build.toml
Example/Notebook/src/app/demo/: Main.co  Note.co  Notebook.co  NotebookFullError.co  Parser.co  ParserError.co  SharedCounter.co
Example/src/: Main.co
Example/src/Notebook/src/app/demo/: Log.co  Notebook.co  NotebookFullError.co  Parser.co  ParserError.co
frontend/: char_class.mli  definitions.ml  diagnostic.mli  diagnostic_renderer.mli  dune  lexer.ml  lexer.mli  main.ml  source_file.ml  source_location.ml  source_location.mli
frontend/cmd/: cli.ml  cmd_exec.ml  cmd_strings.ml  print_lexer_stream.ml  runner.ml
frontend/diagnostics/: diagnostic.ml  diagnostic_renderer.ml
frontend/file/: source_file.mli
frontend/lexer/: char_class.ml  lexer.ml  lexer.mli
frontend/token/: source_span.ml  source_span.mli  token.ml  token.mli
src/frontend/: backend_bindings.ml  cloth_frontend.ml  dune  lexer.ml  token.ml
src/llvm-backend/: driver.cpp  dune
test/: dune  test_char_class.ml  test_diagnostic.ml  test_lexer.ml  test_source_file.ml  test_source_span.ml  test_token.ml
