(include_subdirs unqualified)

(library
 (name cloth)
 (modules
  cmd_strings
  cmd_exec
  definitions
  print_lexer_stream
  source_location
  source_span
  source_file
  diagnostic
  diagnostic_renderer
  token
  char_class
  lexer)
 (libraries fmt yojson))

(executable
 (name main)
 (public_name cloth)
 (modules main)
 (libraries cloth))
