(test
 (name test_token)
 (libraries cloth alcotest))

(test
 (name test_source_file)
 (libraries cloth alcotest))

(test
 (name test_source_span)
 (libraries cloth alcotest))

(test
 (name test_lexer)
 (libraries cloth alcotest))

(test
 (name test_char_class)
 (libraries cloth alcotest))

(test
 (name test_diagnostic)
 (libraries cloth alcotest))
